audit history mobile alignment issue

--- a/assets/css/rtl-basic-mobile.css
+++ b/assets/css/rtl-basic-mobile.css
@@ -581,18 +581,18 @@ table.responsive-table td:nth-child(2):before {
 }
 .audit-wrapper #audit-trail-wrapper .main .history table tr td:first-child,
 .audit-wrapper #audit-trail-wrapper .main .history table th:first-child{
-    padding-left: 1% !important; 
-  padding-right: 30% !important; 
-    text-align: right;
+    /* padding-left: 1% !important;  */
+/*  padding-right: 30% !important; */
+    text-align: left;
 }
 
 table.display td, table.display th {
-text-align: right;
+text-align: left;
 }
 
 table.responsive-table td:nth-child(1), table.responsive-table td:nth-child(2) {
-    padding-left: 0% !important;
-    padding-right: 30% !important;
+   /* padding-left: 0% !important;*/
+  /*  padding-right: 30% !important; */
 }
 
 
@@ -621,8 +621,8 @@ table.responsive-table td:nth-child(2):before {
 @media(orientation:portrait) {
 .audit-wrapper #audit-trail-wrapper .main .history table tr td:first-child,
 .audit-wrapper #audit-trail-wrapper .main .history table th:first-child{
-    padding-left: 1% !important; 
-  padding-right: 30% !important; 
+/* padding-left: 1% !important;  */
+  /*  padding-right: 30% !important; */
     text-align: right;
 }
 #audit-trail-wrapper .header {
@@ -639,12 +639,12 @@ table.responsive-table td:nth-child(2):before {
 }
 
 table.display td, table.display th {
-text-align: right;
+text-align: left;
 }
 
 table.responsive-table td:nth-child(1), table.responsive-table td:nth-child(2) {
-    padding-left: 0% !important;
-    padding-right: 30% !important;
+    /*padding-left: 0% !important;*/
+    /*  padding-right: 30% !important; */
 }
 
 #mobile-adopt-sign {
@@ -662,7 +662,7 @@ table.responsive-table td:nth-child(1), table.responsive-table td:nth-child(2) {
 @media(orientation: landscape) {
 
     .audit-wrapper #audit-trail-wrapper .main .history table tr td:first-child, .audit-wrapper #audit-trail-wrapper .main .history table th:first-child{
-        padding-right: 0px !important;
+      /*  padding-right: 0px !important; */
         
     }
 
@@ -748,7 +748,7 @@ table.responsive-table td:nth-child(1), table.responsive-table td:nth-child(2) {
 @media only screen and (min-device-width: 375px) and (max-device-width: 667px) and (orientation: landscape) {
 
     .audit-wrapper #audit-trail-wrapper .main .history table tbody tr td:first-child, .audit-wrapper #audit-trail-wrapper .main .history table th:first-child{
-        padding-right: 30% !important;
+      /*  padding-right: 30% !important; */
         
     }
 
@@ -770,7 +770,7 @@ table.responsive-table td:nth-child(1), table.responsive-table td:nth-child(2) {
     }
 
     .audit-wrapper #audit-trail-wrapper .main .history table tr td:first-child, .audit-wrapper #audit-trail-wrapper .main .history table th:first-child {
-         padding-right: 30% !important;
+       /*  padding-right: 30% !important; */
     }
 }
 
@@ -786,7 +786,7 @@ table.responsive-table td:nth-child(1), table.responsive-table td:nth-child(2) {
     }
 
     .audit-wrapper #audit-trail-wrapper .main .history table tr td:first-child, .audit-wrapper #audit-trail-wrapper .main .history table th:first-child {
-         padding-right: 30% !important;
+        /*  padding-right: 30% !important; */
     }
 }
 .checkbox input[type=checkbox], .checkbox input[type=radio] {
@@ -800,4 +800,31 @@ table.responsive-table td:nth-child(1), table.responsive-table td:nth-child(2) {
 }
 .checkbox-inline, .radio-inline {
      padding-left: 5px; 
+}
+
+@media only screen and (max-width: 780px){
+table.responsive-table td:nth-child(1), table.responsive-table td:nth-child(2) {
+    padding-left: 3% !important;
+}
+table.responsive-table td span, table.responsive-table td span {
+    position: relative !important;
+   
+}
+}
+
+table.display td.time {
+     width: auto; 
+}
+
+.time span,.log span{
+    float:right;
+
+}
+
+
+@media only screen and (max-width: 479px){
+#audit-trail-wrapper .main .history table tbody tr td:first-child, #audit-trail-wrapper .main .history table tbody th:first-child {
+     padding-left: 3% !important; 
+    
+}
 }
